Decks(:Deck) - cards list table overflow style fix Decks - fixed position:fixed; in mana cell in table head

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -140,78 +140,80 @@ footer{
 .shared-table {
   border-collapse: collapse;
   width: 100%;
-  tr {
-    @include transition(all ease .4s);
-    td {
-      padding: 0;
-      cursor: pointer;
-      border: 1px solid $dark-grey;
-      border-right: 0;
-      border-left: 0;
-      font-size: initial;
-      a {
-        display: flex;
-        align-items: center;
-        padding: 10px 0;
-        width: 100%;
-        height: 100%;
-        justify-content: center;
-      }
-      &:first-child {
-        border-left: 1px solid $dark-grey;
+  tbody {
+    tr {
+      @include transition(all ease .4s);
+      td {
+        padding: 0;
+        cursor: pointer;
+        border: 1px solid $dark-grey;
+        border-right: 0;
+        border-left: 0;
+        font-size: initial;
         a {
-          justify-content: flex-start;
-          padding-left: 10px;
+          display: flex;
+          align-items: center;
+          padding: 10px 0;
+          width: 100%;
+          height: 100%;
+          justify-content: center;
         }
-      }
-      &:last-child {
-        border-right: 1px solid $dark-grey;
-      }
+        &:first-child {
+          border-left: 1px solid $dark-grey;
+          a {
+            justify-content: flex-start;
+            padding-left: 10px;
+          }
+        }
+        &:last-child {
+          border-right: 1px solid $dark-grey;
+        }
 
-    }
-    .title {
-      text-align: left;
-      span, div {
-        display: inline-block;
-      }
-      span {
-        padding: 5px;
-        font-size: 30px;
-        border: 2px solid $dark-grey;
-        border-radius: 50%;
-        margin-right: 5px;
       }
       .title {
-        font-weight: bold;
+        text-align: left;
+        span, div {
+          display: inline-block;
+        }
+        span {
+          padding: 5px;
+          font-size: 30px;
+          border: 2px solid $dark-grey;
+          border-radius: 50%;
+          margin-right: 5px;
+        }
+        .title {
+          font-weight: bold;
+        }
+        .author {
+          font-size: 10px;
+        }
       }
-      .author {
-        font-size: 10px;
-      }
-    }
-    .mana-curve {
-      position: relative;
-      z-index: 1;
-      height: 100%;
-      ul {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        li {
-          width: 4px;
-          background: $dark-grey;
-          height: 20px;
-          margin-right: 2px;
-          position: relative;
-          &:last-child {
-            margin-right: 0;
-          }
-          span {
-            @include transition(all ease .4s);
-            width: 100%;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            background: white;
+      .mana-curve {
+        position: relative;
+        z-index: 1;
+        height: 100%;
+        ul {
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          li {
+            width: 4px;
+            background: $dark-grey;
+            height: 20px;
+            margin-right: 2px;
+            position: relative;
+            &:last-child {
+              margin-right: 0;
+            }
+            span {
+              @include transition(all ease .4s);
+              width: 100%;
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              background: white;
+            }
           }
         }
       }
@@ -1050,21 +1052,21 @@ footer{
               }
             }
           }
-          tr{
+            tr {
 
-            td{
-              &.title{
-                width: 30%;
-              }
-              &.hsClass, &.votes, &.views, &.mana-curve{
-                width: 10%;
-              }
-              &.type, &.created{
-                width: 15%;
+              td {
+                &.title {
+                  width: 30%;
+                }
+                &.hsClass, &.votes, &.views, &.mana-curve {
+                  width: 10%;
+                }
+                &.type, &.created {
+                  width: 15%;
 
+                }
               }
             }
-          }
         }
       }
     }
